<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/main_settings_title"
    android:key="@string/main_settings_key"
    android:persistent="false">
    <PreferenceCategory
        android:title="@string/alarm_settings_title"
        android:key="@string/alarm_settings_key">
        <SwitchPreference
            android:title="@string/alarm_title"
            android:key="@string/alarm_key"
            android:defaultValue="false">
        </SwitchPreference>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/location_settings_title"
        android:key="@string/location_settings_key"
        android:dependency="@string/alarm_key">
        <EditTextPreference
            android:title="@string/radius_title"
            android:key="@string/radius_key"
            android:defaultValue="3"
            android:hint="@string/radius_hint"
            android:inputType="number">
        </EditTextPreference>
        <ListPreference
            android:title="@string/destination_title"
            android:key="@string/destination_key">
        </ListPreference>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/ringtone_settings_title"
        android:key="@string/ringtone_settings_key"
        android:dependency="@string/alarm_key">
        <SwitchPreference
            android:title="@string/ringtone_switch_title"
            android:key="@string/ringtone_switch_key"
            android:defaultValue="false">
        </SwitchPreference>
        <RingtonePreference
            android:title="@string/ringtone_search_title"
            android:key="@string/ringtone_search_key"
            android:dependency="@string/ringtone_switch_key"
            android:ringtoneType="alarm">
        </RingtonePreference>
    </PreferenceCategory>
</PreferenceScreen>